--- a/index.html
+++ b/index.html
@@ -10,7 +10,45 @@
 </head>
 
 <body>
-    <h1>Tecsup I Aprende sobre Desarrollo Web Gratis con los mejores</h1>
+    <header>
+        <nav>
+            <a href="#">
+                <img src="https://www.tecsup.edu.pe/themes/tecsup/logo.svg" alt="Tecsup" height="32" />
+            </a>
+            <ul>
+                <li>
+                    <a href="#">Teams</a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/eder-raphael-campos-aguilar-80a3a5148/" target="_blank"
+                        rel="noopener noreferrer">Eder</a>
+                </li>
+            </ul>
+
+            <ul>
+                <li>
+                    <a href="https://www.youtube.com/@elliotgaramendi" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-youtube"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://github.com/raphaelcampos24" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-github"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.linkedin.com/in/elliotgaramendi/" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-linkedin"></i>
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/elliotgaramendi/" target="_blank" rel="noopener noreferrer">
+                        <i class="bi bi-instagram"></i>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+    </header>
 </body>
 
 </html>
