feat: homepage hero

--- a/index.html
+++ b/index.html
@@ -49,6 +49,43 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <article>
+            <div>
+                <div>
+                    <h1>Desarrollo Web I Tecsup I CodiGo</h1>
+                    <h2>Aprende sobre Desarrollo Web Gratis con los mejores</h2>
+                    <p>
+                        El mejor centro educativo de Perú y Latinoamérica, Tecsup,
+                        donde puedes aprender Desarrollo Web gratis. ¡Impulsa tu futuro con nosotros!
+                    </p>
+                    <div>
+                        <a href="https://www.codigo.edu.pe/" target="_blank" rel="noopener noreferrer">CodiGo</a>
+                        <a href="#">Contacto</a>
+                    </div>
+                    <div>
+                        <img src="https://i.postimg.cc/6qmcf4wy/28278955-1704707829618404-3438880982057149369-n.jpg" alt="Eder Campos"
+                        width="256" height="256" />
+                        <ul>
+                            <li>
+                                <img src="https://www.svgrepo.com/show/452234/java.svg" alt="Java" width="64" height="64">
+                            </li>
+                            <li>
+                                <img src="https://www.svgrepo.com/show/353614/c-plusplus.svg" alt="C++" width="64" height="64">
+                            </li>
+                            <li>
+                                <img src="https://www.svgrepo.com/show/452184/csharp.svg" alt="C#" width="64" height="64">
+                            </li>
+                            <li>
+                                <img src="https://www.svgrepo.com/show/374093/sql.svg" alt="SQL" width="64" height="64">
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </article>
+    </main>
 </body>
 
 </html>
